inst/feedback.css
<style>

:root {
	--red-col: 204, 0, 0;
	--green-col: 0, 170, 0;
	--comment-col: 204, 0, 0;
	--font-col: 110, 110, 110;
}

.main-container {
    max-width: 100%;
}
	
.feedback {
    border: solid 1px rgb(var(--theme-col));
    padding: 1em 1em 0.5em 1em;
    background-color: rgba(var(--theme-col), .3);
    margin-bottom: 3em;
	border-radius: 6px;
}

.feedback > title {
    font-size: 20px;
    color: rgb(var(--theme-col));
	display: block;
	margin-top: 10px;
	margin-bottom: 5px;
}

.feedback a:hover {
    background-color: transparent;
}

.feedback a {
    color: rgb(var(--theme-col));
}

.feedback::before {
    content: 'Feedback';
	display: block;
	font-size: 25px;
	color: rgb(var(--theme-col));
	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
	margin-bottom: 10px;
}


warn {
	color: rgb(var(--comment-col));
	background-color: rgba(var(--comment-col), .3);
	border: solid 1px rgb(var(--comment-col));
}

c1 {
	background-color: rgba(var(--c1-col), .3);
	border-color: rgb(var(--c1-col));
}

c1 > strong {
	color: rgb(var(--c1-col));
}

c1:hover::before {
    content: var(--c1-name);
    border-color: rgb(var(--c1-col));
	color: rgb(var(--c1-col));
}
	
c1:hover::after {
    content: var(--c1-text);
    border-color: rgb(var(--c1-col));
}

c2 {
	background-color: rgba(var(--c2-col), .3);
	border-color: rgb(var(--c2-col));
}

c2 > strong {
	color: rgb(var(--c2-col));
}

c2:hover::before {
    content: var(--c2-name);
    border-color: rgb(var(--c2-col));
	color: rgb(var(--c3-col));
}
	
c2:hover::after {
    content: var(--c2-text);
    border-color: rgb(var(--c2-col));
}

c3 {
	background-color: rgba(var(--c3-col), .3);
	border-color: rgb(var(--c3-col));
}

c3 > strong {
	color: rgb(var(--c3-col));
}

c3:hover::before {
    content: var(--c3-name);
    border-color: rgb(var(--c3-col));
	color: rgb(var(--c3-col));
}
	
c3:hover::after {
    content: var(--c3-text);
    border-color: rgb(var(--c3-col));
}

c4 {
	background-color: rgba(var(--c4-col), .3);
	border-color: rgb(var(--c4-col));
}

c4 > strong {
	color: rgb(var(--c4-col));
}

c4:hover::before {
    content: var(--c4-name);
    border-color: rgb(var(--c4-col));
	color: rgb(var(--c4-col));
}
	
c4:hover::after {
    content: var(--c4-text);
    border-color: rgb(var(--c4-col));
}

c5 {
	background-color: rgba(var(--c5-col), .3);
	border-color: rgb(var(--c5-col));
}

c5 > strong {
	color: rgb(var(--c5-col));
}

c5:hover::before {
    content: var(--c5-name);
    border-color: rgb(var(--c5-col));
	color: rgb(var(--c5-col));
}
	
c5:hover::after {
    content: var(--c5-text);
    border-color: rgb(var(--c5-col));
}


.hljs-comment {
	border-color: rgb(var(--theme-col));
    background-color: rgba(var(--theme-col), .3);
    font-style: normal;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
}

warn, c1,  c2, c3, c4, c5, .hljs-comment {
	padding: 1px 3px;
	margin: 0 5px;
	position: relative;
	border-style: solid;
	border-width: 1px;
	box-decoration-break: clone;
	color: #444;
}

pre {
	border-color: rgb(var(--theme-col));
	border-radius: 6px;
	background-color: #fdfdfd;
	word-break: break-word;
}

.r-code-collapse {
	position: relative;
}

.r-code-collapse::before {
    content: 'YOUR CODE';
    font-size: 20pt;
    font-weight: 900;
    color: rgb(var(--theme-col));
    position: absolute;
    top: -28px;
}

.hljs-comment > .hljs-string, .hljs-comment > .hljs-number, .hljs-comment > .hljs-keyword, .hljs-comment > .hljs-literal {
	font-weight: normal;
	color: #444;
}

.btn-group-xs > .btn, .btn-xs {
    font-size: 14px;
    line-height: 1.5;
    border-radius: 6px;
    padding: 6px 10px;
    border-color: rgb(var(--theme-col));
    background-color: rgb(var(--theme-col));
    color: white;
	width: 70px;
}

.btn-default.active, .btn-default:active, .open > .dropdown-toggle.btn-default {
    color: #fdfdfd;
    background-color: rgb(var(--theme-col));
    border-color: rgb(var(--theme-col));
}

.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus,
.btn-default:active:focus, .btn-default:active:hover, .open > .dropdown-toggle.btn-default.focus,
.open > .dropdown-toggle.btn-default:focus, .open > .dropdown-toggle.btn-default:hover,
.btn-default:hover, .btn-default.active:hover, .btn-default:active:hover, .open > .dropdown-toggle.btn-default:hover {
    color: rgb(var(--theme-col));
    background-color: rgba(var(--theme-col), .3);
    border-color: rgb(var(--theme-col));
	outline: none;
}

.btn-default.focus, .btn-default:focus {
    color: rgb(var(--theme-col));
    background-color: #fdfdfd;
    border-color: rgb(var(--theme-col));
}

.btn-group-vertical > .btn.active, .btn-group-vertical > .btn:active,
.btn-group-vertical > .btn:focus, .btn-group-vertical > .btn:hover,.btn-group > .btn.active,
.btn-group > .btn:active, .btn-group > .btn:focus, .btn-group > .btn:hover {
    z-index: 1;
}

.dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover {
    background-color: rgba(var(--theme-col), .3);
}

c1:hover::before, c2:hover::before, c3:hover::before,
c4:hover::before, c5:hover::before {
    position: fixed;
    background-color: white;
    top: 112px;
    right: 15px;
    border-radius: 0px;
    border-top-right-radius: 6px;
    border-top-left-radius: 6px;
    padding: 5px;
    z-index: 3;
    border-bottom: 0;
    width: 230px;
	font-size: larger;
	font-weight: bold;
	border-style: solid;
	border-width: 1px;
	border-bottom: 0;
}

c1:hover::after, c2:hover::after, c3:hover::after,
c4:hover::after, c5:hover::after {
    position: fixed;
    background-color: white;
	color: rgb(var(--font-col));
    top: 141px;
    right: 15px;
    white-space: pre;
    border-radius: 6px;
    padding: 5px;
    width: 230px;
	white-space: break-spaces;
	z-index:2;
	border-style: solid;
	border-width: 1px;
}


details {
    display: inline-block;
    position: relative;
    border-style: solid;
    border-width: 1px;
    border-radius: 6px;
    margin: 5px;
    padding: 5px;
    width: 230px;
	cursor: pointer;
}

summary {	
    text-align: right;
    font-size: 16pt;
}

summary::after {
    content: '';
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    position: absolute;
}

summary::marker {
	content: '';
}

.c1 {
	background-color: rgba(var(--c1-col), .3);
	border-color: rgb(var(--c1-col));
}

.c1 > summary {	
	color: rgb(var(--c1-col));
}

.c2 {
	background-color: rgba(var(--c2-col), .3);
	border-color: rgb(var(--c2-col));
}

.c2 > summary {	
	color: rgb(var(--c2-col));
}

.c3 {
	background-color: rgba(var(--c3-col), .3);
	border-color: rgb(var(--c3-col));
}

.c3 > summary {	
	color: rgb(var(--c3-col));
}

.c4 {
	background-color: rgba(var(--c4-col), .3);
	border-color: rgb(var(--c4-col));
}

.c4 > summary {	
	color: rgb(var(--c4-col));
}

.c5 {
	background-color: rgba(var(--c5-col), .3);
	border-color: rgb(var(--c5-col));
}

.c5 > summary {	
	color: rgb(var(--c5-col));
}

.c1 > summary::before, .c2 > summary::before, .c3 > summary::before,
.c4 > summary::before, .c5 > summary::before {
	position: absolute;
	left: 5px;
	top: 9px;
	font-size: 13pt;
}

.c1 > summary::before {
    content: var(--c1-name);
}

.c2 > summary::before {
    content: var(--c2-name);
}

.c3 > summary::before {
    content: var(--c3-name);
}

.c4 > summary::before {
    content: var(--c4-name);
}

.c5 > summary::before {
    content: var(--c5-name);
}

.grade {
    position: fixed;
    top: 107px;
    width: 300px;
    right: -50px;
}

.inner {
    position: relative;
}

.main-content {
	width: calc(100% - 520px);
    min-height: 2000px;
    left: 270px;
    position: relative;
}

.sidebar1 {
	position: fixed;
	left: 15px;
	width: 260px;
}

.sidebar2 {
    position: absolute;
    right: 0;
    top: 0;
    width: 215px;
    height: 100%;
}

.mark-container {
	position: absolute;
	top: 0;
	/*left: 20px;*/
	width: 100%;
	height: 100%;
}

.mark {
	position: sticky;
	position: -webkit-sticky;
	top: 20px;
	border: solid 1px rgb(var(--theme-col));
    font-size: 4em;
    color: rgb(var(--theme-col));
    padding: 0 10px;
    background-color: rgba(var(--theme-col), .3);
	width: 230px;
	border-radius: 6px;
	text-align: right;
	display: block;
	z-index: 1;
}

.mark:hover {
    text-decoration: none;
    color: rgb(var(--theme-col));
}

.mark::before {
    content: 'Grade';
    font-size: 25pt;
    top: 25px;
    left: 5px;
	position: absolute;
}

.results-container {
	top: 25px;
    left: 20px;
    border: solid 1px rgb(var(--warn-col));
    padding: 20px 6px 0px 10px;
	max-height: 90vh;
	overflow-y: auto;
	overflow-x: hidden;
	border-radius: 6px;
}

.results-container::before {
    content: 'Correct results';
    color: rgb(var(--warn-col));
    font-size: 18pt;
    position: relative;
	top: -12px;
}

.results strong, .results .table > thead > tr > th {
	color: rgb(var(--warn-col));
	padding-top: 0;
}


@media screen and (max-width: 1130px) { 
	
	#header {
		margin-bottom: 100px;
	}
	
	.sidebar2 {
		right: 0;
	}
	
	.mark {
		position: relative;
		top: 65px;
		left: 75px;
		width: 150px;
		padding: .5em .3em 0em 0.7em;
	}

	.mark::before {
		font-size: 18pt;
		top: 3px;
	}
	.main-content {
		width: calc(100% - 260px);
		left: 270px;
	}
	
	c1:hover::before, c2:hover::before, c3:hover::before,
	c4:hover::before, c5:hover::before {
		top: 20px;
	}

	c1:hover::after, c2:hover::after, c3:hover::after,
	c4:hover::after, c5:hover::after {
		top: 50px;
	}
			
	.grade {
		position: relative;
		width: 100%;
		top: 0;
		right:0;
		text-align: center;
		margin: -5px;
		padding-bottom: 20px;
	}
	
	details[open] {
		width: 100%;
	}
}


@media screen and (max-width: 920px) { 
	
	.main-content {
		position: absolute;
		top: var(--res-offset);
		width: 100%;
		left: 0px;
	}
	
	.sidebar1 {
		position: absolute;
		top: 10px;
		left:0;
		height: 100%;
		width: 100%;
		min-height: 5000px;
	}
	
	.results-container {
		overflow-x: auto;
		overflow-y: hidden;
		position: sticky;
		background-color: white;
		z-index: 2;
	}
	
	.results {
		display: inline-grid;
		padding: 30px 0px 0px 0px;
		grid-gap: 5px;
		min-width: var(--res-width);
		
	}
	
	.results-container::before {
		position: absolute;
		top: 5px;
	}
	.results-item {
		text-align: left;
		padding: 0;
	}
	
	.item1 {
		grid-column: 1;
		grid-row: 1;
	}
	
	.item2 {
		grid-column: 2;
		grid-row: 1;
	}
	
	.item3 {
		grid-column: 3;
		grid-row: 1;
	}
	
	.item4 {
		grid-column: 4;
		grid-row: 1;
	}
	
	.mark {
		top: calc(var(--res-offset) + 85px);
		left: 65px;	
	}	
	
	c1:hover::before, c2:hover::before, c3:hover::before,
	c4:hover::before, c5:hover::before {
		top: 32vh;
		right: 25px;
	}

	c1:hover::after, c2:hover::after, c3:hover::after,
	c4:hover::after, c5:hover::after {
		top: calc(32vh + 30px);
		right: 25px;
	}

}


@media screen and (max-width: 728px) { 
	.sidebar2 {
		left: calc(711px - 274px);
	}
}

@media screen and (max-width: 600px) { 

	#header {
		margin-bottom: 0;
	}
	
	.sidebar2 {
		left: 0;
		width: 100%;
		position: relative;
		top: var(--res-offset);
		height: auto;
	}
	
	.mark-container {
		height: 150px;
		position: relative;
		left: 0;
	}
	
	.mark {
		position: absolute;
		bottom: 10px;
		top: auto;
		left: 0;
	}
	
	.mark::before {
		position: absolute;
	}
	
	.main-content {
		position: relative;
	}
	
}


@media screen and (max-width: 535px) {
	
	.c1, .c2, .c3, .c4, .c5 {
		width: 98%;
	}
}
</style>

